# daily_speaking_order_dice

./: LICENSE  Makefile  README.md  config.yaml  functions.py  main.py  pyproject.toml
jsx-tutorial/: package-lock.json  package.json
jsx-tutorial/src/: App.css  App.js
project_order_dice/: README.md  functions.py  main.py
project_order_dice/Config/: away.yaml
project_order_dice/tests/: test_enter_names.py
tests/: test_enter_names.py  test_fixture.yaml
