[tool.poetry]
name = "daily_speaking_order_dice"
version = "0.1.0"
description = "ToDo"
readme = "README.md"
repository = "https://github.com/mathisschiwy/daily_speaking_order_dice"
authors = ["Mathis Schiwy <mathis.schiwy@greenbone.net>"]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
